<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.membership.RegisterActivity">

    <include
        android:id="@+id/toolbarLayoutRegister"
        layout="@layout/hikizan_toolbar_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarLayoutRegister"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLabelName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="32dp"
            android:layout_height="3dp"
            android:background="?attr/colorPrimary" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRegisterName"
            style="@style/HikizanTextInputLayoutStyle"
            android:layout_marginTop="8dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRegisterName"
                style="@style/HikizanEditTextStyle"
                android:hint="@string/hint_ex_name"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLabelEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/label_email"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="32dp"
            android:layout_height="3dp"
            android:background="?attr/colorPrimary" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRegisterEmail"
            style="@style/HikizanTextInputLayoutStyle"
            android:layout_marginTop="8dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRegisterEmail"
                style="@style/HikizanEditTextStyle"
                android:hint="@string/hint_ex_email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLabelPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/label_password"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="32dp"
            android:layout_height="3dp"
            android:background="?attr/colorPrimary" />

        <com.hikizan.hikigram.presentation.reuseable.custom_view.HikizanPasswordForm
            android:id="@+id/etRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="8dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilConfirmPassword"
            style="@style/HikizanTextInputLayoutStyle.Password"
            android:layout_marginTop="8dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etConfirmPassword"
                style="@style/HikizanEditTextStyle"
                android:hint="@string/label_confirm_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            style="@style/HikizanButtonStyle.Disable"
            android:layout_marginTop="64dp"
            android:padding="16dp"
            android:text="@string/action_register"
            app:cornerRadius="12dp" />
    </LinearLayout>

</RelativeLayout>