<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".presentation.membership.LoginActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lavLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:lottie_autoPlay="false"
        app:lottie_loop="false"
        app:layout_constraintBottom_toTopOf="@+id/halfTopGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:lottie_rawRes="@raw/hikizan_anim_profile" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/halfTopGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        style="@style/HikizanTextInputLayoutStyle"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/halfTopGuideline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            style="@style/HikizanEditTextStyle"
            android:hint="@string/label_email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/HikizanTextInputLayoutStyle.Password"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            style="@style/HikizanEditTextStyle"
            android:hint="@string/label_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.hikizan.hikigram.presentation.reuseable.custom_view.HikizanPasswordForm
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn"
        app:passwordToggleEnabled="true" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/centerVerticalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignUp"
        style="@style/HikizanButtonStyle"
        android:layout_width="0dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="8dp"
        android:text="@string/action_sign_up"
        app:layout_constraintEnd_toStartOf="@id/centerVerticalGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignIn"
        style="@style/HikizanButtonStyle.Disable"
        android:layout_width="0dp"
        android:layout_marginStart="8dp"
        android:text="@string/action_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/centerVerticalGuideline"
        app:layout_constraintTop_toTopOf="@+id/btnSignUp" />

</androidx.constraintlayout.widget.ConstraintLayout>