<?xml version="1.0" encoding="utf-8"?>
<com.kennyc.view.MultiStateView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/msvItemLoadingStoryPaging"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:msv_errorView="@layout/hikizan_error_state_layout">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:shimmer_auto_start="true">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:elevation="2dp"
            app:cardCornerRadius="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgProfileIcon"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="6dp"
                    android:src="@color/colorDarkGray"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvItemName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="8dp"
                    android:background="@color/colorDarkGray"
                    android:text="@string/label_username"
                    android:textColor="@color/colorBlackTransparent"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/imgProfileIcon"
                    app:layout_constraintStart_toEndOf="@+id/imgProfileIcon"
                    app:layout_constraintTop_toTopOf="@+id/imgProfileIcon" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgItemPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginTop="6dp"
                    android:background="@color/colorDarkGray"
                    android:scaleType="centerCrop"
                    app:layout_constraintTop_toBottomOf="@+id/imgProfileIcon" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvItemDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/colorDarkGray"
                    android:text="@string/label_desc_value_ex"
                    android:textColor="@color/colorBlackTransparent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imgItemPhoto"
                    app:layout_constraintVertical_bias="1.0" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLabelDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@color/colorDarkGray"
                    android:text="@string/label_description"
                    android:textColor="@color/colorBlackTransparent"
                    app:layout_constraintBottom_toTopOf="@+id/tvItemDate"
                    app:layout_constraintStart_toStartOf="@+id/tvItemDescription"
                    app:layout_constraintTop_toBottomOf="@+id/tvItemDescription" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvItemDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"
                    android:layout_marginBottom="6dp"
                    android:background="@color/colorDarkGray"
                    android:text="@string/label_date_value_ex"
                    android:textColor="@color/colorBlackTransparent"
                    android:textSize="11sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </com.facebook.shimmer.ShimmerFrameLayout>
</com.kennyc.view.MultiStateView>